# simon-arc-env

./: MANIFEST.in  Makefile  README.md  pyproject.toml
documents/: available_actions.md  idea_available_actions.md  image_compare.md  inventory.md  manipulate_any_page.md  object_mask_editor.md  rewards.md  undo.md
examples/: play.py  random_actions.py  random_actions_headless.py  readme.md  train_test.py
simon_arc_env/: __init__.py  actions.py  arc_json_model.py  colors.py  cursors.py  image.py  page.py  simon_arc_env.py
tests/: test_arc_json_model.py  test_image.py
